# openai_cli

./: Cargo.toml  README.md
src/: client.rs  commands.rs  main.rs
src/services/: handlers.rs
